force-app/main/default/objects/Contact/fields/DetailAddress__c.field-meta.xml
<CustomField>
    <fullName>DetailAddress__c</fullName>
    <label>상세주소</label>
    <length>255</length>
    <type>Text</type>
</CustomField>