force-app/main/default/objects/Contact/fields/RoadAddress__c.field-meta.xml
<CustomField>
    <fullName>RoadAddress__c</fullName>
    <label>도로명 주소</label>
    <length>255</length>
    <type>Text</type>
</CustomField>